--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,21 @@
         "plugin:@typescript-eslint/recommended",
         "prettier",
         "prettier/@typescript-eslint"
-      ]
+      ],
+      "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": [
+          "off",
+          {
+            "allowTypedFunctionExpressions": true
+          }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "argsIgnorePattern": "^_"
+          }
+        ]
+      }
     }
   ]
 }
