--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions",
+  "name": "@aoe2-live/functions",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
@@ -9,6 +9,10 @@
     "clean": "rimraf dist/"
   },
   "dependencies": {
+    "@aoe2-live/common": "^0.0.0",
+    "@types/compression": "^1.7.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   }
