--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@aoe2-live/common",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf dist/"
+    "clean": "rimraf dist/ *.tsbuildinfo"
   }
 }
