--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "ES2019",
     "module": "commonjs",
     "lib": ["ES2019", "ES2020.Promise", "ES2020.BigInt", "ES2020.String"],
-    "declaration": true,
     "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true,
     "outDir": "dist/",
     "rootDir": "src/",
     "isolatedModules": true,
