--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,19 +1,28 @@
 {
   "name": "@aoe2-live/functions",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf dist/"
+    "build": "webpack",
+    "clean": "rimraf dist/",
+    "dev": "tsc -b -w",
+    "predeploy": "run-s clean build"
   },
   "dependencies": {
-    "@aoe2-live/common": "^0.0.0",
-    "@types/compression": "^1.7.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "file-type": "^15.0.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "node-fetch": "^2.6.1",
+    "sharp": "^0.26.1"
+  },
+  "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/node": "^14.11.5",
+    "@types/node-fetch": "^2.5.7",
+    "@types/sharp": "^0.26.0"
   }
 }
