--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,16 +13,11 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "file-type": "^15.0.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "node-fetch": "^2.6.1",
-    "sharp": "^0.26.1"
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
-    "@types/node": "^14.11.5",
-    "@types/node-fetch": "^2.5.7",
-    "@types/sharp": "^0.26.0"
+    "@types/node": "^14.11.5"
   }
 }
