--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "prettier": "2.1.2",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
