--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,16 +8,21 @@
     "build": "webpack",
     "clean": "rimraf dist/",
     "dev": "tsc -b -w",
-    "predeploy": "run-s clean build"
+    "predeploy": "run-s clean build",
+    "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
-    "@types/node": "^14.11.5"
+    "@types/node": "^14.11.5",
+    "@types/node-fetch": "^2.5.7",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   }
 }
