--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,17 @@
   "hosting": {
     "public": "packages/hosting/out",
     "cleanUrls": true,
+    "headers": [
+      {
+        "source": "/_next/**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=31536000, immutable"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "/api/**",
