--- a/packages/hosting/package.json
+++ b/packages/hosting/package.json
@@ -10,15 +10,15 @@
     "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
-    "next": "9.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "swr": "^0.3.5",
+    "next": "^10.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "swr": "^0.3.8-beta.2",
     "tailwindcss": "^1.8.12"
   },
   "devDependencies": {
     "@types/react": "^16.9.51",
-    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-flexbugs-fixes": "^5.0.0",
     "postcss-preset-env": "^6.7.0"
   }
 }
