--- a/packages/hosting/package.json
+++ b/packages/hosting/package.json
@@ -10,10 +10,10 @@
     "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
+    "firebase": "^8.0.0",
     "next": "^10.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "swr": "^0.3.8-beta.2",
     "tailwindcss": "^1.8.12"
   },
   "devDependencies": {
